styles.css
html {
  font-size: 150%;
  font-weight: 300;
  font-family: Helvetica, Arial, sans-serif;
  line-height: 1.4;
}

body {
  display: flex;
  background-image: linear-gradient(96.2deg, rgb(255, 230, 112) 10.4%, rgb(255, 100, 100) 43.8%, rgb(0, 93, 219) 105.8%);
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.calculator {
  box-shadow: 0 0 25px 0 black;
  border-radius: 0.5em;
  overflow: hidden;
}

.calculatorDisplay {
  background-color: #393e46;
  color: white;
  width: 16.25rem;
  padding: 0.75rem 1rem;
  text-align: tight;
  font-size: calc(1rem * 1.2 * 1.2);
}

.calculatorKeys {
  display: grid;
  grid-gap: 2px;
  grid-template-columns: repeat(4, auto);
  grid-template-areas:
    ". . . ."
    "seven eight nine equal"
    "four five six equal"
    "one two three equal"
    "zero decimal clear equal" ;
}

.calculatorKeys > button {
  border: none;
  padding: 20px;
}

.one {
  grid-area: one;
}
.two {
  grid-area: two;
}
.three {
  grid-area: three;
}
.four {
  grid-area: four;
}
.five {
  grid-area: five;
}
.six {
  grid-area: six;
}
.seven {
  grid-area: seven;
}
.eight {
  grid-area: eight;
}
.nine {
  grid-area: nine;
}
.zero {
  grid-area: zero;
}
.decimal {
  grid-area: decimal;
}
.clear {
  grid-area: clear;
}
.zero {
  grid-area: zero;
}

.equal {
  grid-area: equal;
  background: #ff6f3c;
}

.equal:active,
.equal:focus,
[data-type="operator"]:focus {
  background: rgb(255, 100, 100);
}

[data-type="operator"] {
  background: #dbd8e3;
}

[data-type="number"]:active,
[data-type="number"]:focus,
[data-type="clear"]:active,
[data-type="clear"]:focus {
  background: rgb(255, 230, 112);
}

[data-type="number"]
[data-type="clear"] {
  background-color: white;
}

